--- a/style.css
+++ b/style.css
@@ -31,7 +31,8 @@
 }
 
 .rating-wrap .rate-star {
-  display: inline-block;
+  display: flex;
+  flex-direction: row-reverse;
   width: 1.5rem;
   font-size: 1.5rem;
   text-align: center;
