--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 
 .rating-wrap .rate-star {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   width: 1.5rem;
   font-size: 1.5rem;
   text-align: center;
