--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -8,8 +8,37 @@
             <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }} </a></li>
         {% endfor%}
     </ul>
+
+    
 {% else %}
     <p>No polls are available.</p>
 {% endif%}
+
+{% endblock %}
+
+{% block album %}
+
+{% for question in latest_question_list %}
+<div class="col">
+    <div class="card shadow-sm">
+      <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em"><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }} </a> </text></svg>
+
+      <div class="card-body">
+        <p class="card-text">You likely made it to the website because you were searching for a random word generator which our main page tool does an excellent job of doing. As would be expected, the main tool produces more common words used on a regular basis by most people. But what if you want to find weird English words? That's exactly why we created the Random Unusual Word Generator.
+
+            If you're looking for words that are part of the English language, but you may have never heard used in conversation before, this is the online tool you've been looking for. It has hundreds of odd, unusual, weird, funny, and just plain entertaining words that you'll never likely use in a normal conversation, but are definitely fun to know. When you think, "I would like to learn a new word today" in your mind, the words in this generator are exactly the type you're thinking of. Since these words are uncommon, the definition of each word is also included in the results so you know exactly what each word means. Below you'll find a number of ways this online tool can be used.</p>
+        <div class="d-flex justify-content-between align-items-center">
+          <div class="btn-group">
+            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+          </div>
+          <small class="text-muted">9 mins</small>
+        </div>
+      </div>
+    </div>
+  </div>
+
+ 
+{% endfor %}
 
 {% endblock %}
