--- a/mysite/polls/templates/polls/results.html
+++ b/mysite/polls/templates/polls/results.html
@@ -1,6 +1,6 @@
 {% extends './layout.html' %}
 
-{% block body %}
+{% block main %}
     <h1>{{ question.question_text }}</h1>
     <ul>
         {% for choice in question.choice_set.all %}
