--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
+<link rel="stylesheet" href="../../static/polls/style.css">
+
 {% block carousel %}
 
 <!-- Carousel -->
@@ -12,7 +14,7 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       
-      <img  src="../static/polls/images/20170809_141659.jpg" alt="Italy">
+      <img  style="height:512px" srcset="../static/polls/images/Pietro.jpg 1200w, ../static/polls/images/Grindelwald_resized.jpg 1600w" sizes="(max-width: 1200px) 100%, (max-width: 1600px) 100%" src="../static/polls/images/Pietro_abv_1200.jpeg" class="responsive_img" alt="Italy">
 
       <div class="container">
         <div class="carousel-caption text-start">
@@ -24,7 +26,7 @@
     </div>
     <div class="carousel-item">
       <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-      <img lass="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false" src="../static/polls/images/1525552533075.jpg" alt="Sedona">
+      <img  style="height:512px" srcset="../static/polls/images/Sedona_blw_1200.jpg 1200w, ../static/polls/images/Horshoe_resized.jpg 1600w" sizes="(max-width: 1200px) 100%, (max-width: 1600px) 100%" src="../static/polls/images/Sedona_abv_1200.jpeg" class="responsive_img" alt="Sedona">
 
       <div class="container">
         <div class="carousel-caption">
@@ -36,7 +38,7 @@
     </div>
     <div class="carousel-item">
       <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
+      <img  style="height:512px" srcset="../static/polls/images/Airplane_blw_1200.jpg 1200w, ../static/polls/images/Airplane_resized.jpg 1600w" sizes="(max-width: 1200px) 100%, (max-width: 1600px) 100%" src="../static/polls/images/Airplane_abv_1200.jpeg" class="responsive_img" alt="Airplane">
       <div class="container">
         <div class="carousel-caption text-end">
           <h1>One more for good measure.</h1>
