--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -85,13 +85,20 @@
         
         {% if request.user.is_authenticated %}
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/accounts/customer/{{user.id}}/">Hello, {{ request.user }}!</a>                                      
-                </li>
+              {% if request.user.is_staff %}
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/admin/">Hello, Youngsuk!</a>                                      
+              </li>  
+              {% else%}
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/accounts/user/">Hello, {{ request.user }}!</a>                                      
+              </li>
+              {% endif%}
+                
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'logout' %}">Logout</a>
                 </li>
-            </ul>          
+            </ul>    
         {% else %}
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
