--- a/mysite/polls/templates/polls/detail.html
+++ b/mysite/polls/templates/polls/detail.html
@@ -12,32 +12,36 @@
 <div class="table-responsive">
     <table class="table">
         <thead>
-            <th scope="col">#</th>
+            <th scope="col">No.</th>
             <th scope="col">Choice</th>
             <th scope="col">Votes</th>
         </thead>
         <tbody>
             {% for choice in question.choice_set.all %}
             <tr>            
-                <th scope="row">{{ choice.id }}</th>
+                <th scope="row">{{ forloop.counter }}</th>
                 <td>{{ choice.choice_text }}</td>
-                <td>{{ choice.votes }}</td>            
+                <td>{{ choice.votes }}</td>
             </tr>
             {% endfor%}
         </tbody>
     </table>
 </div>
 
-
+<div class="d-flex justify-content-center">
 <form action="{% url 'polls:vote' question.id %}" method = "post">
     {% csrf_token %}
     {% for choice in question.choice_set.all %}
-        <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
-        <label for="choice{{ forloop.counter }}">{{choice.choice_text}}</label><br>
+    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+        <label class="btn btn-outline-success">
+        <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" >{{ choice }}
+        </label>
+    </div>
     {% endfor %}
-    <input type="submit" value="vote">
+    <input type="submit" value="vote" class="btn btn-primary">
 </form>
+</div>
 
-<a href="/polls/">Back to Main Page</a>
+<a href="/polls/" class="btn btn-warning">Back to Main Page</a>
 
 {% endblock %}
