--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -123,7 +123,9 @@
       <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><a href="{% url 'polls:detail' question.id %}"><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">{{ question.question_text }} </a> </text></svg>
 
       <div class="card-body">
-          <p class="card-text">{{ question.choice_set.all }}</p>
+          <p class="card-text">{{ question.choice_set.values }}</p>
+          <p class="card-text">{{ question.choice_set.values.count }}</p>
+
         
         
         <div class="d-flex justify-content-between align-items-center">
