--- a/mysite/polls/templates/polls/results.html
+++ b/mysite/polls/templates/polls/results.html
@@ -19,7 +19,7 @@
             <tbody>
                 {% for choice in question.choice_set.all %}
                 <tr>            
-                    <th scope="row">{{ choice.id }}</th>
+                    <th scope="row">{{ forloop.counter }}</th>
                     <td>{{ choice.choice_text }}</td>
                     <td>{{ choice.votes }}</td>            
                 </tr>
@@ -29,7 +29,7 @@
     </div>
 
 <div class="d-flex justify-content-center">
-    <a href="{% url 'polls:detail' question.id %}"><input type="submit" class="btn btn-outline-info" value="Vote Again?"></a>
+    <a href="{% url 'polls:detail' question.id %}"><input type="submit" class="btn btn-outline-info " value="Vote Again?"></a>
     <a href="/polls/"><input type="submit" class="btn btn-outline-info" value="Back to Survey Page"></a>
 </div>
 
