--- a/mysite/accounts/templates/accounts/login.html
+++ b/mysite/accounts/templates/accounts/login.html
@@ -105,63 +105,72 @@
 <body>
     
        
-    <header>
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark mb-5">
-          <div class="container-fluid ">
-            <a class="navbar-brand" href="/">Youngsuk's page</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class=" navbar-nav navbar-collapse justify-content-start" id="navbarCollapse">
-              <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="https://www.instagram.com/pkkpokko123/">Instagram</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="https://www.facebook.com/profile.php?id=100003043302231">Facebook</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="https://www.youtube.com/channel/UCIlG6iYlNwNVqkgYgHdKGVw/videos" tabindex="-1" aria-disabled="true">Youtube</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/accounts/" tabindex="-1" aria-disabled="true">Products</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/accounts/customer/1" tabindex="-1" aria-disabled="true">Customer</a>
-                </li>
-              </ul>
-            </div>
-            
-            <!--
-            <form class="d-flex justify-content-center">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-            -->
-            
-            {% if request.user.is_authenticated %}
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <li class="nav-item">
-                        <span class="nav-link" aria-current="page">{{ request.user }}</span>                    
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{% url 'logout' %}">Logout</a>
-                    </li>
-                </ul>          
-            {% else %}
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{% url 'register' %}">Register</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="{% url 'login' %}">Login</a>
-                    </li>
-                </ul>
-            {% endif %}
-          </div>
-        </nav>
-        
-      </header>
+	<header>
+		<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark mb-5">
+		  <div class="container-fluid ">
+			<a class="navbar-brand" href="/">Youngsuk's page</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
+			<div class=" navbar-nav navbar-collapse justify-content-start" id="navbarCollapse">
+			  <ul class="navbar-nav me-auto mb-2 mb-md-0">
+				<li class="nav-item">
+				  <a class="nav-link" aria-current="page" href="https://www.instagram.com/pkkpokko123/">Instagram</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="https://www.facebook.com/profile.php?id=100003043302231">Facebook</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="https://www.youtube.com/channel/UCIlG6iYlNwNVqkgYgHdKGVw/videos" tabindex="-1" aria-disabled="true">Youtube</a>
+				</li>
+				{% if request.user.is_staff %}
+				<li class="nav-item">
+				  <a class="nav-link" href="/accounts/" tabindex="-1" aria-disabled="true">Dashboard</a>
+				</li>
+				{% endif %}
+				<li class="nav-item">
+				  <a class="nav-link" href="/polls/" tabindex="-1" aria-disabled="true">Survey</a>
+				</li>
+			  </ul>
+			</div>
+			
+			<!--
+			<form class="d-flex justify-content-center">
+			  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+			  <button class="btn btn-outline-success" type="submit">Search</button>
+			</form>
+			-->
+			
+			{% if request.user.is_authenticated %}
+				<ul class="navbar-nav me-auto mb-2 mb-md-0">
+				  {% if request.user.is_staff %}
+				  <li class="nav-item">
+					<a class="nav-link" aria-current="page" href="/admin/">Hello, Youngsuk!</a>                                      
+				  </li>  
+				  {% else%}
+				  <li class="nav-item">
+					<a class="nav-link" aria-current="page" href="/accounts/user/">Hello, {{ request.user }}!</a>                                      
+				  </li>
+				  {% endif%}
+					
+					<li class="nav-item">
+						<a class="nav-link" aria-current="page" href="{% url 'logout' %}">Logout</a>
+					</li>
+				</ul>    
+			{% else %}
+				<ul class="navbar-nav me-auto mb-2 mb-md-0">
+					<li class="nav-item">
+						<a class="nav-link" aria-current="page" href="{% url 'register' %}">Register</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" aria-current="page" href="{% url 'login' %}">Login</a>
+					</li>
+				</ul>
+			{% endif %}
+		  </div>
+		</nav>
+		
+	  </header>
 
 	<div class="container h-100">
 		<div class="d-flex justify-content-center h-100">
