--- a/mysite/polls/templates/polls/survey.html
+++ b/mysite/polls/templates/polls/survey.html
@@ -12,7 +12,12 @@
       <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><a href="{% url 'polls:detail' question.id %}"><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">{{ question.question_text }} </a> </text></svg>
 
       <div class="card-body">
-          <p class="card-text">{{ question.choice_set.all }}</p>
+
+          {% for i in question.choice_set.all %}
+            <p class="card-text">{{i}}</p>
+          {% endfor %}
+
+          
         
         
         <div class="d-flex justify-content-between align-items-center">
@@ -20,7 +25,7 @@
             <button type="button" class="btn btn-sm btn-outline-secondary">Vote</button>
             <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
           </div>
-          <small class="text-muted">9 mins</small>
+          <small class="text-muted">{{question.pub_date.year}}/{{question.pub_date.month}}/{{question.pub_date.day}}</small>
         </div>
       </div>
     </div>
