--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.82.0">
-    <title>Polls</title>
+    <title>Youngsuk's site</title>
     <!-- {% load static %} -->
     <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
     
@@ -123,9 +123,7 @@
 {% endblock %}
   
 {% block headings %}
-{% endblock %}
-
-  
+{% endblock %} 
 
     
 <!--  ALBUM   -->
