--- a/mysite/accounts/templates/accounts/dashboard.html
+++ b/mysite/accounts/templates/accounts/dashboard.html
@@ -31,11 +31,12 @@
         <h5>Last 5 Orders</h5>
         <hr>
         <div class="card card-body">
-            
+            <a href="{% url 'create_order' user.id %}" class="btn btn-primary btn-sm btn-block">Create Order</a>
             <table class="table table-sm">
                 <tr>
                     <th>Product</th>
                     <th>Date Ordered</th>
+                    <th>Customer</th>
                     <th>Status</th>
                     <th>Update</th>
                     <th>Remove</th>
@@ -45,6 +46,7 @@
                 <tr>
                     <td>{{ order.product }}</td>
                     <td>{{ order.date_created }}</td>
+                    <td>{{ order.customer }}</td>
                     <td>{{ order.status }}</td>
                     <td><a href="{% url 'update_order' order.pk %}" class="btn btn-sm btn-info">Update</a></td>
                     <td><a href="{% url 'delete_order' order.pk %}" class="btn btn-sm btn-danger">Remove</a></td>
