--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -116,8 +116,10 @@
 
 <div class="album py-5 bg-light">
   <div class="container">
+    <h1>The latest surveys</h1>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
+      
 {% for question in latest_question_list %}
 <div class="col">
     <div class="card shadow-sm">
